Change layout of forms of user

--- a/view/user/default/profile.phtml
+++ b/view/user/default/profile.phtml
@@ -1,153 +1,58 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="card">
-            <div id="profile-container">
-                <div class="container collapse" id="change-password-container">
-                    <form class="form-horizontal" method="POST" action="/user/change-password">
-                        <fieldset>
-                            <!-- Form Name -->
-                            <legend><?= $this->translate('Change Password'); ?></legend>
-                            <!-- Text input-->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="password"><?= $this->translate('Current Password') ?></label>  
-                                <div class="col-md-4">
-                                    <input value="" id="password" name="password" type="text" placeholder="<?= $this->translate('Enter your current password') ?>" class="form-control input-md" required>
-                                </div>
-                            </div>
-                            <!-- Text input-->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="new-password"><?= $this->translate('New Password') ?></label>  
-                                <div class="col-md-4">
-                                    <input id="new-password" name="new-password" type="text" placeholder="<?= $this->translate('Enter a new password') ?>" class="form-control input-md" required>
-                                </div>
-                            </div>
-                            <!-- Text input-->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="repeat-password"><?= $this->translate('Repeat Password') ?></label>  
-                                <div class="col-md-4">
-                                    <input id="repeat-password" name="repeat-password" type="text" placeholder="<?= $this->translate('Repeat a new password') ?>" class="form-control input-md" required>
-                                </div>
-                            </div>
-                            <!-- Button -->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="change-password"></label>
-                                <div class="col-md-4">
-                                    <button id="change" name="change-password" class="btn btn-danger"><?= $this->translate('Change Passord') ?></button>
-                                </div>                                                                                        
-                            </div>
-                        </fieldset>
-                    </form>
+            <ul class="nav nav-tabs tab-stats">
+                <li role="user-details" class="active">
+                    <a href="#user-details" aria-controls="user-details" role="tab" data-toggle="tab" aria-expanded="true">
+                        <span class="glyphicon glyphicon-list-alt"></span>  <?= $this->translate('User Details') ?>
+                    </a>
+                </li>
+                <li role="user-adress" class="">
+                    <a href="#user-adress" aria-controls="user-adress" role="tab" data-toggle="tab" aria-expanded="true">                        
+                        <span class="glyphicon glyphicon-home"></span> <?= $this->translate('Adress') ?>
+                    </a>
+                </li>
+                <li role="user-email" class="">
+                    <a href="#user-email" aria-controls="user-email" role="tab" data-toggle="tab" aria-expanded="false">
+                        <span class="glyphicon glyphicon-envelope"></span> <?= $this->translate('Emails') ?>
+                    </a>
+                </li>
+                <li role="user-phone" class="">
+                    <a href="#user-phone" aria-controls="user-phone" role="tab" data-toggle="tab" aria-expanded="false">
+                        <span class="glyphicon glyphicon-earphone"></span> <?= $this->translate('Phones') ?>
+                    </a>
+                </li>
+                <li role="user" class="">
+                    <a href="#user" aria-controls="user" role="tab" data-toggle="tab" aria-expanded="false">
+                        <span class="glyphicon glyphicon-user"></span> <?= $this->translate('Users') ?>
+                    </a>
+                </li>
+                <li role="user-documents" class="">
+                    <a href="#user-documents" aria-controls="user-documents" role="tab" data-toggle="tab" aria-expanded="false">
+                        <span class="glyphicon glyphicon-file"></span> <?= $this->translate('Documents') ?>
+                    </a>
+                </li>                                
+            </ul>
+            <div class="card-body tab-content">
+                <div role="tabpanel" class="tab-pane active" id="user-details">                        
+                    <?= $this->render("user/form/user-details.phtml"); ?>
                 </div>
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#user"><span class="glyphicon glyphicon-user">
-                                    </span><?= $this->translate('Users') ?></a>
-                                <i class="fa fa-plus pull-right" data-add-form="/user/add-user.form" aria-hidden="true"></i>
-                            </h4>
-                        </div>                            
-                        <div id="user" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                <!-- Text input-->
-                                <fieldset>
-                                    <form class="api-form form-horizontal" action="/user.form" method="POST" name="form-user" id="form-user" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
-                                        <!-- Form Name -->
-                                        <legend><?= $this->translate('Users') ?></legend>                                        
-                                        <div id="container-delete-user-{id}" class="form-group hidden clone" data-clone="add-user">
-                                            <label class="col-md-4 control-label" id="label-username-{id}" for="input-username"><?= $this->translate('Username') ?>: </label>
-                                            <div class="col-md-4">                        
-                                                <input readonly class="form-control input-md" value="" id="input-username-{id}" name="username" type="text" >
-                                            </div>
-                                            <div class="col-md-4">
-                                                <button data-container-remove="container-delete-user" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this user?') ?>" data-body="{username}" data-toggle="modal" data-target="#confirm-delete" data-id="{id}" data-delete-confirm="/user/delete" name="confirm-delete-{id}" id="confirm-delete-{id}" type="submit" class="confirm-delete btn btn-danger">
-                                                    <?= $this->translate('Delete') ?>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <?php foreach ($this->user_people AS $user) { ?>
-                                            <div id="container-delete-user-<?= $user->getId() ?>" class="form-group">
-                                                <label class="col-md-4 control-label" id="label-username-<?= $user->getId() ?>" for="input-username"><?= $this->translate('Username') ?>: </label>
-                                                <div class="col-md-4">                        
-                                                    <input readonly class="form-control input-md" value="<?= $user->getUsername() ?>" id="input-username-<?= $user->getId() ?>" name="username" type="text" >
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <button data-container-remove="container-delete-user" <?= $user->getId() == $this->user->getId() ? 'disabled' : '' ?> data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this user?') ?>" data-body="<?= $user->getUsername() ?>" data-toggle="modal" data-target="#confirm-delete" data-id="<?= $user->getId() ?>" data-delete-confirm="/user/delete" name="confirm-delete-<?= $user->getId() ?>" id="confirm-delete-<?= $user->getId() ?>" type="button" class="confirm-delete btn btn-danger">
-                                                        <?= $this->translate('Delete') ?>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        <?php } ?>
-                                    </form>
-                                </fieldset>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#user-mail"><span class="glyphicon glyphicon-envelope">
-                                    </span><?= $this->translate('E-Mails') ?></a>
-                                <i class="fa fa-plus pull-right" data-add-form="/user/add-email.form" aria-hidden="true"></i>
-                            </h4>
-                        </div>                            
-                        <div id="user-mail" class="panel-collapse collapse">                                                        
-                            <div class="panel-body">
-                                <!-- Text input-->
-                                <fieldset>
-                                    <form class="api-form form-horizontal" action="/user-email.form" method="POST" name="form-user-email" id="form-user-email" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
-                                        <!-- Form Name -->
-                                        <legend><?= $this->translate('Emails') ?></legend>                                        
-                                        <div id="container-delete-email-{id}" class="form-group hidden clone" data-clone="add-user-email">
-                                            <label class="col-md-4 control-label" id="label-mail-{id}" for="input-mail"><?= $this->translate('Email') ?>: </label>
-                                            <div class="col-md-4">                        
-                                                <input readonly class="form-control input-md" value="" id="input-mail-{id}" name="email" type="text" >
-                                            </div>
-                                            <div class="col-md-4">
-                                                <button data-container-remove="container-delete-email" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this email?') ?>" data-body="{email}" data-toggle="modal" data-target="#confirm-delete" data-id="{id}" data-delete-confirm="/user/delete-email.json" name="confirm-delete-{id}" id="confirm-delete-{id}" type="submit" class="confirm-delete btn btn-danger">
-                                                    <?= $this->translate('Delete') ?>
-                                                </button>
-                                            </div>
-                                        </div>                                        
-                                        <?php foreach ($user->getPeople()->getEmail() AS $user_email) { ?>
-                                            <div id="container-delete-email-<?= $user_email->getId() ?>" class="form-group">
-                                                <label class="col-md-4 control-label" id="label-mail-<?= $user_email->getId() ?>" for="input-mail"><?= $this->translate('Email') ?>: </label>
-                                                <div class="col-md-4">                        
-                                                    <input readonly class="form-control input-md" value="<?= $user_email->getEmail() ?>" id="input-mail-<?= $user_email->getId() ?>" name="mail" type="text" >
-                                                </div>                                                
-                                                <div class="col-md-4">
-                                                    <button  data-container-remove="container-delete-email" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this email?') ?>" data-body="<?= $user_email->getEmail() ?>" data-toggle="modal" data-target="#confirm-delete" data-id="<?= $user_email->getId() ?>" data-delete-confirm="/user/delete-email.json" name="confirm-delete-<?= $user_email->getId() ?>" id="confirm-delete-<?= $user_email->getId() ?>" type="button" class="confirm-delete btn btn-danger">
-                                                        <?= $this->translate('Delete') ?>
-                                                    </button>
-                                                </div>
-                                            </div>                                        
-                                        <?php } ?>
-                                    </form>
-                                </fieldset>
-                            </div>                              
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#user-phone"><span class="glyphicon glyphicon-earphone">
-                                    </span><?= $this->translate('Phones') ?></a>
-                            </h4>
-                        </div>
-                        <div id="user-phone" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <!-- Text input-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="phone"><?= $this->translate('Phone') ?></label>  
-                                    <div class="col-md-4">
-                                        <input data-mask="({mask: ['(99) 9999-9999', '(99) 99999-9999' ],keepStatic: true})" id="phone" name="phone" type="text" placeholder="<?= $this->translate('Enter your phone') ?>" class="form-control input-md" required>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>                        
-            </div>                    
+                <div role="tabpanel" class="tab-pane" id="user-adress">                        
+                    <?= $this->render("user/form/user-adress.phtml"); ?>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="user-email"> 
+                    <?= $this->render("user/form/user-email.phtml"); ?>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="user-phone"> 
+                    <?= $this->render("user/form/user-phone.phtml"); ?>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="user">
+                    <?= $this->render("user/form/user.phtml"); ?>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="user-documents">
+                    <?= $this->render("user/form/user-documents.phtml"); ?>
+                </div>
+            </div>
         </div>         
     </div>
 </div>
