--- a/view/user/form/user.phtml
+++ b/view/user/form/user.phtml
@@ -16,7 +16,7 @@
                     </button>
                 </div>
             </div>
-            <?php foreach ($this->user_people AS $user) { ?>
+            <?php foreach ($this->userPeople AS $user) { ?>
                 <div id="container-delete-user-<?= $user->getId() ?>" class="form-group">
                     <label class="col-md-4 control-label" id="label-username-<?= $user->getId() ?>" for="input-username"><?= $this->translate('Username') ?>: </label>
                     <div class="col-md-4">                        
