--- a/view/user/form/user.phtml
+++ b/view/user/form/user.phtml
@@ -3,7 +3,7 @@
     <fieldset>
         <form class="api-form form-horizontal" action="/user.form" method="POST" name="form-user" id="form-user" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
             <!-- Form Name -->
-            <i title="<?=$this->translate('Add new user for this people')?>" class="fa fa-plus pull-right" data-add-form="/user/add-user.form" aria-hidden="true"></i>
+            <i title="<?= $this->translate('Add new user for this people') ?>" class="fa fa-plus pull-right" data-add-form="/user/add-user.form" aria-hidden="true"></i>
             <legend><?= $this->translate('Users') ?></legend>                                        
             <div id="container-delete-user-{id}" class="form-group hidden clone" data-clone="add-user">
                 <label class="col-md-4 control-label" id="label-username-{id}" for="input-username"><?= $this->translate('Username') ?>: </label>
@@ -16,7 +16,7 @@
                     </button>
                 </div>
             </div>
-            <?php foreach ($this->userPeople AS $user) { ?>
+            <?php foreach ($this->userPeople->getUser() AS $user) { ?>
                 <div id="container-delete-user-<?= $user->getId() ?>" class="form-group">
                     <label class="col-md-4 control-label" id="label-username-<?= $user->getId() ?>" for="input-username"><?= $this->translate('Username') ?>: </label>
                     <div class="col-md-4">                        
@@ -28,6 +28,7 @@
                         </button>
                     </div>
                 </div>
+
             <?php } ?>
         </form>
     </fieldset>
